# box_packing

./: README.md  setup.bash
Pose_estimation_aruco/Aruco_marker/: CMakeLists.txt
Pose_estimation_aruco/Aruco_marker/Readme/: ReadMe
Pose_estimation_aruco/Aruco_marker/src/: Aruco_depth.cpp  Aruco_detect.cpp  Aruco_detect_BB.cpp  Aruco_detect_depth.cpp  Aruco_detect_object.cpp  Aruco_pose_estimation_func.cpp
box_packing/: CMakeLists.txt  package.xml  setup.py
box_packing/src/: entity_teleop.py  main.py  test_hover.py
box_packing/src/box_packing/: entity_teleop.py  goddammit.py  jsontest.py  main.py  plan.py  plan_executive.py  sanity.jsonld
box_packing/src/box_packing/skills/: __init__.py  example.jsonld  motion_skills.py  moveit_solver.jsonld  pickup.jsonld  region.py  skill.jsonld
box_packing/src/box_packing/visual_servoing/: controller.cpp  controller.h  examples_common.h  readme.md  visual_servoing_main.cpp
moveit_box_packing/: CMakeLists.txt  package.xml
moveit_box_packing/config/: moveit_ed_config.yaml
moveit_box_packing/launch/: demo.launch  motion_planning_api_tutorial.launch  moveit.rviz  moveit_ed.launch
moveit_box_packing/src/: motion_planning_api_tutorial.cpp  pick_place.cpp
my_ed_object_models/: CMakeLists.txt  package.xml
my_ed_object_models/env-hooks/: 99.ed_object_models.bash
my_ed_object_models/models/boxing_world/: model.config  model.sdf
my_ed_object_models/models/cardboard_box/: model.config  model.sdf
my_ed_object_models/models/rice_box/: model.config  model.sdf
my_ed_object_models/models/table/: model.config  model.sdf
my_franka_description/: CMakeLists.txt  package.xml
my_franka_description/robots/: panda_arm.urdf.xacro  wide_hand.xacro
my_panda_controller/: CMakeLists.txt  package.xml  plugin.xml
my_panda_controller/config/: my_controllers.yaml
my_panda_controller/include/: aruco_detector.h  controller.h  data_saver.h  rosfranka_test.h  velocity_controller.h
my_panda_controller/src/: aruco_detector.cpp  controller.cpp  data_saver.cpp  rosfranka_test.cpp  velocity_controller.cpp
tools/: CMakeLists.txt  package.xml
tools/config/: my_ed_config.yaml
tools/config/rviz/: panda.rviz
tools/launch/: franka_control.launch  panda_controller.launch  panda_sim.launch  panda_start.launch
tools/scripts/: teleop.py
