<package format="2">
    <name>box_packing</name>
    <version>0.0.1</version>
    <description>
        This package provides the high level control for the box packing experiment
    </description>
    <maintainer email="p.v.dooren@tue.nl">Peter van Dooren</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <buildtool_depend>python3-setuptools</buildtool_depend>
    
    <depend>rospy</depend>
    <depend>ed_python</depend>
</package>