<package format="2">
    <name>my_panda_controller</name>
    <version>0.0.1</version>
    <description>
        This package provides custom controllers for the franka emika panda robot
    </description>
    <maintainer email="p.v.dooren@tue.nl">Peter van Dooren</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
</package>