<package format="2">
    <name>tools</name>
    <version>0.0.1</version>
    <description>
        This package provides tools for the box packing experiment.
    </description>
    <maintainer email="p.v.dooren@tue.nl">Peter van Dooren</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
</package>