<package format="2">
    <name>tools</name>
    <version>0.0.1</version>
    <description>
        This package provides tools for the box packing experiment.
    </description>
    <maintainer email="p.v.dooren@tue.nl">Peter van Dooren</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <exec_depend>controller_manager</exec_depend>
    <exec_depend>ed</exec_depend>
    <exec_depend>ed_gui_server</exec_depend>
    <exec_depend>ed_rviz_plugins</exec_depend>
    <exec_depend>franka_description</exec_depend>
    <exec_depend>franka_example_controllers</exec_depend>
    <exec_depend>franka_gazebo</exec_depend>
    <exec_depend>gazebo_ros</exec_depend>
    <exec_depend>joint_state_publisher</exec_depend>
    <exec_depend>my_ed_object_models</exec_depend>
    <exec_depend>my_panda_controller</exec_depend>
    <exec_depend>my_franka_description</exec_depend>
    <exec_depend>robot_state_publisher</exec_depend>
    <exec_depend>tf</exec_depend>

</package>
